<resources>
    <string name="app_name">CRUD_Firebase_Kotlin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_btn_login">Login</string>
    <string name="login_image">Login Image</string>
    <string name="tv_login">Bonjour!</string>
    <string name="txt_ed_nama">Masukkan Nama</string>
    <string name="txt_ed_nim">Masukkan NIM</string>
    <string name="txt_ed_jurusan">Jurusan</string>
    <string name="txt_btn_save">Simpan</string>
    <string name="txt_btn_showdata">Lihat Data</string>
    <string name="txt_btn_logout">Logout</string>
    <string name="txt_tv_nim">NIM</string>
    <string name="txt_tv_nama">Nama</string>
    <string name="txt_tv_jurusan">Jurusan</string>
    <string name="ed_new_nim">NIM Baru</string>
    <string name="ed_new_nama">Nama Baru</string>
    <string name="en_new_jurusan">Jurusan Baru</string>
    <string name="btn_update">Update</string>
</resources>