<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_8ssp"
    android:orientation="vertical"
    tools:context=".UpdateData">

    <EditText
        android:id="@+id/ed_new_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="18"
        android:hint="@string/ed_new_nim"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/ed_new_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="18"
        android:hint="@string/ed_new_nama"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/ed_new_jurusan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="18"
        android:hint="@string/en_new_jurusan"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/btn_update"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>