<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Lin_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_170sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <EditText
            android:id="@+id/ed_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_ed_nim"
            android:inputType="number"/>

        <EditText
            android:id="@+id/ed_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_ed_nama"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/ed_jurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_ed_jurusan"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:backgroundTint="#FD8A33"
                android:text="@string/txt_btn_save"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/btn_showdata"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="#2AF62D"
                android:text="@string/txt_btn_showdata"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="#E6F45050"
                android:text="@string/txt_btn_logout"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>