<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#FAFAFA">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        android:text="@string/tv_login"
        android:textSize="@dimen/_38ssp"
        android:fontFamily="@font/franchise"
        android:textColor="#FF911C"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_300sdp"
        style="?android:attr/progressBarStyle"/>

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="246dp"
        android:layout_height="477dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_70sdp"
        android:src="@drawable/firebase"
        android:contentDescription="@string/login_image" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_370sdp"
        android:text="@string/txt_btn_login"
        android:textAllCaps="false"
        android:backgroundTint="@color/cardview_dark_background"/>

</RelativeLayout>